# spo-quota-students

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240101_000000_001_initial_migration.py  20240204_000000_002_add_specialty_code.py  20240204_000001_003_update_students_columns.py  20240205_000000_004_add_specialty_templates.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  deps.py  operator.py  stats.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  security.py
backend/app/models/: __init__.py  settings.py  specialty.py  specialty_template.py  spo.py  student.py  user.py
backend/app/schemas/: __init__.py  settings.py  specialty.py  specialty_template.py  spo.py  stats.py  student.py  user.py
backend/app/services/: __init__.py  docx_export.py  settings_service.py  user_service.py
backend/scripts/: add_template_id.py  reset_and_seed_data.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_operator.py  test_services.py  test_stats.py
docs/plan/: test.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: admin.js  auth.js  index.js  operator.js  stats.js
frontend/src/components/: AppLayout.vue  DashboardChart.vue  OperatorDashboardChart.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  toast.js
frontend/src/views/: LoginView.vue
nginx/: nginx.conf
(+21 files in other folders)
