[project]
name = "spo-quota-students"
version = "1.0.0"
description = "API for managing student quotas in secondary professional organizations"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.18",
    "pydantic[email]==2.10.4",
    "pydantic-settings==2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
